Prevent overflow

--- a/resources/css/bem/wrapped.less
+++ b/resources/css/bem/wrapped.less
@@ -567,6 +567,7 @@
     color: #fff;
     font-size: 32px;
     font-weight: bold;
+    overflow-wrap: anywhere;
 
     &--artist {
       font-size: 20px;
